# App_vn_to_en_Dictionary

./: README.md  Tra_tu_dien_anh_viet.cpp  dictionary_fixed.cpp  grammar_data.txt  practice_data.txt  searchWord.cpp  vocabularyByTopic  vocabularyByTopic.cpp
Data/: Animals.csv  Body part.csv  Clothes.csv  Color.csv  Countries and Nationalities.csv  Daily Routines.csv  Family.csv  Feelings and Emotions.csv  Food and Drink.csv  Fruits.csv  Health and Illness.csv  Household Item.csv  Job and Professional.csv  Music and Instruments.csv  Nature.csv  Number and Counting.csv  Numbers and Counting.csv  Shapes.csv  Sport.csv  Technology.csv  Time and Date.csv  Transport.csv  Travel and Holiday.csv  Vegetable.csv  Weather.csv
Dictionary/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  user.cpp  user.h
